--- a/config.json
+++ b/config.json
@@ -6,11 +6,13 @@
         "fb_url": "https://www.facebook.com/prak3322/",
         "tw_url": "",
         "github_url": "",
-        "blog_name": "",
+        "blog_name": "prakash blogs",
         "blog_title": "",
         "gmail_user": "your-email",
         "gmail_pass": "password",
         "about_me": "hi iam prakash you know my name right",
-        "no_of_posts": 3
+        "no_of_posts": 3,
+        "admin_user": "admin",
+        "admin_pass": "admin"
     }
 }
